# SimpleRayTracer

./: CMakeLists.txt  LICENSE  README.md
Source/: CMakeLists.txt  Main.cpp
Source/Ellie/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Dielectric.cpp  Dielectric.h  HittableList.cpp  HittableList.h  IHittable.h  IMaterial.h  Lambertian.cpp  Lambertian.h  Math.cpp  Math.h  Metal.cpp  Metal.h  Pch.h  Ray.h  RayTracer.cpp  RayTracer.h  Shape.h  Sphere.cpp  Sphere.h  Vector3f.cpp  Vector3f.h  stb_image_write.h
