cmake_minimum_required(VERSION 3.0.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

project(SimpleRayTracer VERSION 0.1.0)

message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
message(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
message(STATUS "CMAKE_CXX_COMPILER_VERSION: ${CMAKE_CXX_COMPILER_VERSION}")
message(STATUS "Configuring CAVE_ENGINE ${CAVE_ENGINE_VERSION}")

set(SIMPLE_RAY_TRACER_BUILD_DEBUG 0)
set(SIMPLE_RAY_TRACER_BUILD_DEVELOPMENT 0)
set(SIMPLE_RAY_TRACER_BUILD_TEST 0)
set(SIMPLE_RAY_TRACER_BUILD_RELEASE 0)

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(SIMPLE_RAY_TRACER_BUILD_DEBUG 1)
elseif (CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
	set(SIMPLE_RAY_TRACER_BUILD_DEVELOPMENT 1)
elseif(CMAKE_BUILD_TYPE MATCHES Release)
	set(SIMPLE_RAY_TRACER_BUILD_TEST 1)
elseif (CMAKE_BUILD_TYPE MATCHES MinSizeRel)
	set(SIMPLE_RAY_TRACER_BUILD_RELEASE 1)
endif()

# configure_file(Config.h.in ${PROJECT_BINARY_DIR}/include/Config.h)

add_subdirectory(Source)

if (SIMPLE_RAY_TRACER_BUILD_TESTS)
    # enable CTest
    include(CTest)
    enable_testing()
    # add_subdirectory(Tests)
endif ()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
    